--- a/styles.css
+++ b/styles.css
@@ -14,3 +14,11 @@ body {
   left: 0;
   padding: 10px;
 }
+
+.button{
+  font-size: 2em;
+  background-color: royalblue;
+  font-style: oblique;
+}
+
+
